# AoC2025

./: .gitignore  ;  CMakeLists.txt
include/: interval_tree.h
src/: day1.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
src/datastruct/: interval_tree.cpp
